feat(java): add JDK25 zero-unsafe runtime path